@@ -16,7 +16,6 @@
 package io.goobi.viewer.indexer;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
@@ -26,6 +25,7 @@ import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.FileTime;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -96,13 +96,9 @@ public class WorldViewsIndexer extends Indexer {
         this.hotfolder = hotfolder;
     }
 
-    /**
-     * Indexes the given WorldViews file.
-     * 
-     * @see io.goobi.viewer.indexer.Indexer#addToIndex(java.nio.file.Path, java.util.Map)
-     */
+    /** {@inheritDoc} */
     @Override
-    public void addToIndex(Path mainFile, Map<String, Boolean> reindexSettings) throws IOException, FatalIndexerException {
+    public List<String> addToIndex(Path mainFile, Map<String, Boolean> reindexSettings) throws IOException, FatalIndexerException {
         logger.debug("Indexing WorldViews file '{}'...", mainFile.getFileName());
         String fileNameRoot = FilenameUtils.getBaseName(mainFile.getFileName().toString());
 
@@ -119,7 +115,7 @@ public class WorldViewsIndexer extends Indexer {
             String pi = FilenameUtils.getBaseName(newMetsFileName);
             Path indexed = Paths.get(getDataRepository().getDir(DataRepository.PARAM_INDEXED_METS).toAbsolutePath().toString(), newMetsFileName);
             if (mainFile.equals(indexed)) {
-                return;
+                return Collections.singletonList(pi);
             }
             if (Files.exists(indexed)) {
                 // Add a timestamp to the old file name
@@ -179,24 +175,28 @@ public class WorldViewsIndexer extends Indexer {
                     logger.error(e.getMessage(), e);
                 }
             }
-            prerenderPagePdfsIfRequired(pi, dataFolders.get(DataRepository.PARAM_MEDIA) != null);
+            prerenderPagePdfsIfRequired(pi);
             logger.info("Successfully finished indexing '{}'.", mainFile.getFileName());
 
             // Remove this file from lower priority hotfolders to avoid overriding changes with older version
             SolrIndexerDaemon.getInstance().removeRecordFileFromLowerPriorityHotfolders(pi, hotfolder);
-        } else {
-            // Error
-            if (hotfolder.isDeleteContentFilesOnFailure()) {
-                // Delete all data folders for this record from the hotfolder
-                DataRepository.deleteDataFoldersFromHotfolder(dataFolders, reindexSettings);
-            }
-            handleError(mainFile, resp[1], FileFormat.WORLDVIEWS);
-            try {
-                Files.delete(mainFile);
-            } catch (IOException e) {
-                logger.error(LOG_COULD_NOT_BE_DELETED, mainFile.toAbsolutePath());
-            }
+
+            return Collections.singletonList(pi);
         }
+
+        // Error
+        if (hotfolder.isDeleteContentFilesOnFailure()) {
+            // Delete all data folders for this record from the hotfolder
+            DataRepository.deleteDataFoldersFromHotfolder(dataFolders, reindexSettings);
+        }
+        handleError(mainFile, resp[1], FileFormat.WORLDVIEWS);
+        try {
+            Files.delete(mainFile);
+        } catch (IOException e) {
+            logger.error(LOG_COULD_NOT_BE_DELETED, mainFile.toAbsolutePath());
+        }
+
+        return Collections.emptyList();
     }
 
     /**
@@ -229,7 +229,7 @@ public class WorldViewsIndexer extends Indexer {
                 logger.info("Solr write strategy injected by caller: {}", useWriteStrategy.getClass().getName());
             }
             initJDomXP(mainFile);
-            IndexObject indexObj = new IndexObject(getNextIddoc(SolrIndexerDaemon.getInstance().getSearchIndex()));
+            IndexObject indexObj = new IndexObject(getNextIddoc());
             logger.debug("IDDOC: {}", indexObj.getIddoc());
 
             // Set PI
@@ -390,8 +390,7 @@ public class WorldViewsIndexer extends Indexer {
                 }
                 SolrInputDocument doc = SolrIndexerDaemon.getInstance()
                         .getSearchIndex()
-                        .checkAndCreateGroupDoc(groupIdField, indexObj.getGroupIds().get(groupIdField), moreMetadata,
-                                getNextIddoc(SolrIndexerDaemon.getInstance().getSearchIndex()));
+                        .checkAndCreateGroupDoc(groupIdField, indexObj.getGroupIds().get(groupIdField), moreMetadata, getNextIddoc());
                 if (doc != null) {
                     useWriteStrategy.addDoc(doc);
                     if (logger.isDebugEnabled()) {
@@ -491,7 +490,7 @@ public class WorldViewsIndexer extends Indexer {
                 }
 
                 // Create new docstruct object
-                currentIndexObj = new IndexObject(getNextIddoc(SolrIndexerDaemon.getInstance().getSearchIndex()));
+                currentIndexObj = new IndexObject(getNextIddoc());
                 currentIndexObj.setParent(rootIndexObj);
                 currentIndexObj.setTopstructPI(rootIndexObj.getTopstructPI());
                 currentIndexObj.setType(pageDocstructLabel);
@@ -652,7 +651,7 @@ public class WorldViewsIndexer extends Indexer {
                     pageDoc.removeField(fieldName);
                 }
                 //  Add this docstruct's SORT_* fields to page
-                if (currentIndexObj.getIddoc() == Long.valueOf((String) pageDoc.getFieldValue(SolrConstants.IDDOC_OWNER))) {
+                if (currentIndexObj.getIddoc() != null && currentIndexObj.getIddoc().equals(pageDoc.getFieldValue(SolrConstants.IDDOC_OWNER))) {
                     for (LuceneField field : currentIndexObj.getLuceneFields()) {
                         if (field.getField().startsWith(SolrConstants.PREFIX_SORT)) {
                             pageDoc.addField(field.getField(), field.getValue());
@@ -720,7 +719,6 @@ public class WorldViewsIndexer extends Indexer {
      * @param pi
      * @param pageCountStart a int.
      * @throws InterruptedException
-     * @throws io.goobi.viewer.indexer.exceptions.FatalIndexerException
      * @should create documents for all mapped pages
      * @should set correct ORDER values
      * @should skip unmapped pages
@@ -728,29 +726,25 @@ public class WorldViewsIndexer extends Indexer {
      * @should maintain page order after parallel processing
      */
     public void generatePageDocuments(final ISolrWriteStrategy writeStrategy, final Map<String, Path> dataFolders, final String pi,
-            int pageCountStart) throws InterruptedException, FatalIndexerException {
+            int pageCountStart) throws InterruptedException {
         // Get all physical elements
         List<Element> eleListImages = xp.evaluateToElements("worldviews/resource/images/image", null);
         logger.info("Generating {} page documents (count starts at {})...", eleListImages.size(), pageCountStart);
 
         if (SolrIndexerDaemon.getInstance().getConfiguration().getThreads() > 1) {
             // Generate each page document in its own thread
-            ForkJoinPool pool = new ForkJoinPool(SolrIndexerDaemon.getInstance().getConfiguration().getThreads());
-            ConcurrentHashMap<Long, Boolean> map = new ConcurrentHashMap<>();
-            try {
+
+            ConcurrentHashMap<String, Boolean> map = new ConcurrentHashMap<>();
+            try (ForkJoinPool pool = new ForkJoinPool(SolrIndexerDaemon.getInstance().getConfiguration().getThreads())) {
                 pool.submit(() -> eleListImages.parallelStream().forEach(eleImage -> {
-                    try {
-                        long iddoc = getNextIddoc(SolrIndexerDaemon.getInstance().getSearchIndex());
-                        if (map.containsKey(iddoc)) {
-                            logger.error("Duplicate IDDOC: {}", iddoc);
-                        }
-                        PhysicalElement page = generatePageDocument(eleImage, String.valueOf(iddoc), pi, null, dataFolders);
-                        if (page != null) {
-                            writeStrategy.addPage(page);
-                            map.put(iddoc, true);
-                        }
-                    } catch (FatalIndexerException e) {
-                        logger.error("Should be exiting here now...");
+                    String iddoc = getNextIddoc();
+                    if (map.containsKey(iddoc)) {
+                        logger.error("Duplicate IDDOC: {}", iddoc);
+                    }
+                    PhysicalElement page = generatePageDocument(eleImage, String.valueOf(iddoc), pi, null, dataFolders);
+                    if (page != null) {
+                        writeStrategy.addPage(page);
+                        map.put(iddoc, true);
                     }
                 })).get(GENERATE_PAGE_DOCUMENT_TIMEOUT_HOURS, TimeUnit.HOURS);
             } catch (ExecutionException e) {
@@ -758,15 +752,11 @@ public class WorldViewsIndexer extends Indexer {
                 SolrIndexerDaemon.getInstance().stop();
             } catch (TimeoutException e) {
                 throw new InterruptedException("Generating page documents timed out for object " + pi);
-            } finally {
-                pool.shutdown();
             }
         } else {
             int order = pageCountStart;
             for (final Element eleImage : eleListImages) {
-                PhysicalElement page =
-                        generatePageDocument(eleImage, String.valueOf(getNextIddoc(SolrIndexerDaemon.getInstance().getSearchIndex())), pi, order,
-                                dataFolders);
+                PhysicalElement page = generatePageDocument(eleImage, String.valueOf(getNextIddoc()), pi, order, dataFolders);
                 if (page != null) {
                     writeStrategy.addPage(page);
                     order++;
@@ -793,7 +783,7 @@ public class WorldViewsIndexer extends Indexer {
         }
 
         int useOrder = order != null ? order : Integer.parseInt(eleImage.getChildText("sequence"));
-        logger.trace("generatePageDocument: {} (IDDOC {}) processed by thread {}", useOrder, iddoc, Thread.currentThread().getId());
+        logger.trace("generatePageDocument: {} (IDDOC {}) processed by thread {}", useOrder, iddoc, Thread.currentThread().threadId());
 
         // Create object for this page
         PhysicalElement ret = createPhysicalElement(order, iddoc, "PHYS_" + MetadataHelper.FORMAT_FOUR_DIGITS.get().format(useOrder));
@@ -855,9 +845,8 @@ public class WorldViewsIndexer extends Indexer {
      * @param indexObj {@link IndexObject}
      * @param hotfolder
      * @param dataRepository
-     * @throws UnsupportedEncodingException
      */
-    static void copyAndReIndexAnchor(IndexObject indexObj, Hotfolder hotfolder, DataRepository dataRepository) throws UnsupportedEncodingException {
+    static void copyAndReIndexAnchor(IndexObject indexObj, Hotfolder hotfolder, DataRepository dataRepository) {
         logger.debug("copyAndReIndexAnchor: {}", indexObj.getPi());
         if (indexObj.getParent() != null) {
             String piParent = indexObj.getParent().getPi();
