@@ -16,6 +16,8 @@
 package io.goobi.viewer.indexer.helper;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -51,12 +53,12 @@ import io.goobi.viewer.indexer.model.datarepository.DataRepository;
  * <p>
  * Configuration class.
  * </p>
- *
  */
 public final class Configuration {
 
     private static final Logger logger = LogManager.getLogger(Configuration.class);
 
+    /** Constant <code>CONFIG_FILE_NAME="config_indexer.xml"</code> */
     public static final String CONFIG_FILE_NAME = "config_indexer.xml";
 
     private ReloadingFileBasedConfigurationBuilder<XMLConfiguration> builder;
@@ -69,8 +71,7 @@ public final class Configuration {
     private Timer reloadTimer = new Timer();
 
     /**
-     * Private constructor.
-     * 
+     * @param configFilePath
      * @throws ConfigurationException
      */
     @SuppressWarnings({ "unchecked", "rawtypes" })
@@ -196,9 +197,12 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getConfigurations.
+     * </p>
+     *
      * @param elementName
-     * @return
+     * @return a {@link java.util.List} object
      */
     public List<String> getConfigurations(String elementName) {
         List<String> ret = new ArrayList<>();
@@ -210,10 +214,13 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getBoolean.
+     * </p>
+     *
      * @param inPath
      * @param defaultValue
-     * @return
+     * @return a {@link java.lang.Boolean} object
      */
     public Boolean getBoolean(String inPath, boolean defaultValue) {
         return getConfig().getBoolean(inPath, defaultValue);
@@ -258,9 +265,12 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getStringList.
+     * </p>
+     *
      * @param inPath
-     * @return
+     * @return a {@link java.util.List} object
      */
     public List<String> getStringList(String inPath) {
         String[] arr = getConfig().getStringArray(inPath);
@@ -289,24 +299,33 @@ public final class Configuration {
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getSolrUrl.
+     * </p>
+     *
      * @should return correct value
+     * @return a {@link java.lang.String} object
      */
     public String getSolrUrl() {
         return getConfiguration("solrUrl");
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getOldSolrUrl.
+     * </p>
+     *
+     * @return a {@link java.lang.String} object
      */
     public String getOldSolrUrl() {
         return getConfiguration("oldSolrUrl");
     }
 
     /**
-     * 
+     * <p>
+     * isSolrUseHttp2.
+     * </p>
+     *
      * @return a boolean
      * @should return correct value
      */
@@ -339,18 +358,24 @@ public final class Configuration {
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getHotfolderPath.
+     * </p>
+     *
      * @should return correct value
+     * @return a {@link java.lang.String} object
      */
     public String getHotfolderPath() {
         return getHotfolderPaths().get(0);
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getHotfolderPaths.
+     * </p>
+     *
      * @should return all values
+     * @return a {@link java.util.List} object
      */
     public List<String> getHotfolderPaths() {
         return getConfigurations("hotFolder");
@@ -434,36 +459,48 @@ public final class Configuration {
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * isCountHotfolderFiles.
+     * </p>
+     *
      * @should return correct value
+     * @return a boolean
      */
     public boolean isCountHotfolderFiles() {
         return getBoolean("performance.countHotfolderFiles", true);
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * isAuthorityDataCacheEnabled.
+     * </p>
+     *
      * @should return correct value
+     * @return a boolean
      */
     public boolean isAuthorityDataCacheEnabled() {
         return getBoolean("performance.authorityDataCache[@enabled]", true);
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getAuthorityDataCacheRecordTTL.
+     * </p>
+     *
      * @should return correct value
+     * @return a int
      */
     public int getAuthorityDataCacheRecordTTL() {
         return getInt("performance.authorityDataCache.recordTTL", 24);
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getAuthorityDataCacheSizeWarningThreshold.
+     * </p>
+     *
      * @should return correct value
+     * @return a int
      */
     public int getAuthorityDataCacheSizeWarningThreshold() {
         return getInt("performance.authorityDataCache.sizeWarningThreshold", 10000);
@@ -494,7 +531,10 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getViewerAuthorizationToken.
+     * </p>
+     *
      * @return Viewer authorization token string, if configured
      * @should return correct value
      */
@@ -504,7 +544,7 @@ public final class Configuration {
 
     /**
      * Whether a viewer task should be triggered that creates pdf files for all images of an indexed process
-     * 
+     *
      * @return Whether a viewer task should be triggered that creates pdf files for all images of an indexed process
      */
     public boolean isPrerenderPdfsEnabled() {
@@ -513,7 +553,7 @@ public final class Configuration {
 
     /**
      * Whether pdfs for record images should be prerendered in any case, even if they already exist
-     * 
+     *
      * @return Whether pdfs for record images should be prerendered in any case, even if they already exist
      */
     public boolean isForcePrerenderPdfs() {
@@ -522,7 +562,7 @@ public final class Configuration {
 
     /**
      * The config_contentServer pdf-configuration variant to use when prerendering pdfs for images
-     * 
+     *
      * @return The config_contentServer pdf-configuration variant to use when prerendering pdfs for images
      */
     public String getPrerenderPdfsConfigVariant() {
@@ -612,7 +652,10 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * isProxyEnabled.
+     * </p>
+     *
      * @return true if enabled; false otherwise
      * @should return correct value
      */
@@ -621,16 +664,22 @@ public final class Configuration {
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getProxyUrl.
+     * </p>
+     *
      * @should return correct value
+     * @return a {@link java.lang.String} object
      */
     public String getProxyUrl() {
         return getString("proxy.proxyUrl");
     }
 
     /**
-     * 
+     * <p>
+     * getProxyPort.
+     * </p>
+     *
      * @return Configured port number; 0 if none found
      * @should return correct value
      */
@@ -639,29 +688,36 @@ public final class Configuration {
     }
 
     /**
-     * 
-     * @return
+     * <p>
+     * getProxyWhitelist.
+     * </p>
+     *
+     * @return a {@link java.util.List} object
      */
     public List<String> getProxyWhitelist() {
         return getStringList("proxy.whitelist.host");
     }
 
     /**
-     * 
+     * <p>
+     * isHostProxyWhitelisted.
+     * </p>
+     *
      * @param url
-     * @return
+     * @return a boolean
      * @throws MalformedURLException
+     * @throws URISyntaxException
      * @should return true if host whitelisted
      */
-    public boolean isHostProxyWhitelisted(String url) throws MalformedURLException {
-        URL urlAsURL = new URL(url);
+    public boolean isHostProxyWhitelisted(String url) throws MalformedURLException, URISyntaxException {
+        URL urlAsURL = new URI(url).toURL();
         return getProxyWhitelist().contains(urlAsURL.getHost());
     }
 
     /**
      * If true, the first page of a document is set as the representative image if no other page is specified in the source document. If this is set
      * to false, and no page is explicitly set as representative, no representative image will be set. Defaults to true
-     * 
+     *
      * @return whether the first page should be used as representative image per default
      */
     public boolean isUseFirstPageAsDefaultRepresentative() {
@@ -669,7 +725,10 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getMetsPreferredImageFileGroups.
+     * </p>
+     *
      * @return Configured preferredImageFileGroup values or empty list
      * @should return configured values
      */
@@ -678,7 +737,10 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getMetsAllowedPhysicalTypes.
+     * </p>
+     *
      * @return Configured physicalElementTypes/type values or empty list
      * @should return configured values
      */
@@ -687,18 +749,22 @@ public final class Configuration {
     }
 
     /**
-     * 
+     * <p>
+     * getMetsVolumeCheckXPath.
+     * </p>
+     *
      * @return Configured XPath expression or default value
      * @should return correct value
      */
     public String getMetsVolumeCheckXPath() {
         return getString("init.mets.volumeCheckXPath",
-                "/mets:mets/mets:dmdSec[1]/mets:mdWrap[@MDTYPE='MODS']/mets:xmlData/mods:mods/mods:relatedItem[@type='host']/mods:recordInfo/mods:recordIdentifier");
+                "/mets:mets/mets:dmdSec[1]/mets:mdWrap[@MDTYPE='MODS']/mets:xmlData/mods:mods/mods:relatedItem[@type='host']"
+                        + "/mods:recordInfo/mods:recordIdentifier");
     }
 
     /**
      * Overrides values in the config file (for unit test purposes).
-     * 
+     *
      * @param property Property path (e.g. "accessConditions.fullAccessForLocalhost")
      * @param value New value to set
      */
@@ -737,6 +803,13 @@ public final class Configuration {
         return true;
     }
 
+    /**
+     * <p>
+     * isReadImageDimensionsFromIIIF.
+     * </p>
+     *
+     * @return a boolean
+     */
     public boolean isReadImageDimensionsFromIIIF() {
         return getBoolean("performance.loadExternalImageInfos", true);
     }
